@@ -1,3 +1,8 @@
+2006-01-02 Magnus Hagdorn
+ * extractProfileTS.py: new prog for extracting profile time series 
+   from CF file.
+ * setup.py: hook up
+
 2005-12-31 Magnus Hagdorn
  * CF_area.py: add option to change resolution of coastline DB
                new method for plotting ice extent
